--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -110,12 +110,18 @@ variable_refined_data:
   type: pandas.CSVDataSet
   filepath: data/03_primary/variable_all_data.csv
   save_args:
-    index: False
+    index: True
   load_args:
-    index_col: [0,1,2]
+    index_col: [0,1,2,5,6,7,8]
 
 tabulated_variable_data:
   type: pandas.CSVDataSet
   filepath: data/03_primary/tabulated_variable_data.csv
   save_args:
     index: False
+
+boolean_yearly_variable:
+  type: pandas.CSVDataSet
+  filepath: data/03_primary/boolean_yearly_variable.csv
+  save_args:
+    index: True
