--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -112,11 +112,11 @@ variable_refined_data:
   save_args:
     index: True
   load_args:
-    index_col: [0,1,2,5,6,7,8]
+    index_col: [0,1,2] #[0,1,2,5,6,7,8]
 
 tabulated_variable_data:
   type: pandas.CSVDataSet
-  filepath: data/03_primary/tabulated_variable_data.csv
+  filepath: data/04_feature/tabulated_variable_data.csv
   save_args:
     index: False
 
@@ -125,3 +125,15 @@ boolean_yearly_variable:
   filepath: data/03_primary/boolean_yearly_variable.csv
   save_args:
     index: True
+
+tabulated_program_data:
+  type: pandas.CSVDataSet
+  filepath: data/04_feature/tabulated_program_nation_data.csv
+  save_args:
+    index: False
+
+tabulated_platform_data:
+  type: pandas.CSVDataSet
+  filepath: data/04_feature/tabulated_platform_data.csv
+  save_args:
+    index: False
