--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -24,17 +24,43 @@ df_refinement:
   rt_merge: id
   header_name: Variable
 
-#var_tabulation:
-#  df_headers:
-#    - variableId
-#  rt_headers:
-#    - id
-#    - name
-#    - nameShort
-#    - canonicalUnit
-#    - description
-#  df_merge: variableId
-#  rt_merge: id
+boolean_time:
+  start_time: Variable_firstMeasured
+  end_time: Variable_lastMeasured
+  time_delta: time_delta
+  reset_index:
+    - ptf_id
+    - lat
+    - lon
+    - Variable_id
+    - Variable_nameShort
+
+boolean_counts_variables:
+  group_by: Variable_id
+  reference_index: Variable_name
+  math_operations: {sum: annual_counts}
+
+boolean_days_variables:
+  group_by: Variable_id
+  reference_index: Variable_name
+  math_operations: {median: days_median, max: days_maximum, mean: days_mean}
+
+boolean_counts_country:
+  group_by: program_country_id
+  reference_index: program_country_name
+  drop:
+    - Variable_id
+    - Variable_nameShort
+  index_reset:
+    - ptf_id
+    - lat
+    - lon
+  math_operations: {sum: annual_counts}
+
+boolean_days_country:
+  group_by: program_country_id
+  reference_index: program_country_name
+  math_operations: {median: days_median, max: days_maximum, mean: days_mean}
 
 program_country_group:
   group_by: program_country_name
@@ -48,7 +74,7 @@ platform_group:
     - ptfModel_ptfType_ptfFamily_name
 
 variable_group:
-  group_by:  Variable_id
+  group_by: Variable_id
   rt_headers:
     - ptfModel_ptfType_description
     - ptfModel_ptfType_nameShort
@@ -57,3 +83,5 @@ variable_group:
     - ptfModel_ptfType_nameShort
     - Variable_canonicalUnit
     - ptfModel_ptfType_description
+
+
