--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -138,20 +138,26 @@ boolean_yearly_variable:
 #    index_col: [0,1,2,3,4]
 #    sheet_name: boolean_counts
 
-#tabulated_program_data:
-#  type: pandas.CSVDataSet
-#  filepath: data/04_feature/tabulated_program_nation_data.csv
-#  save_args:
-#    index: False
-
-tabulated_program_data:
-  type: pandas.ExcelDataSet
-  filepath: data/04_feature/tabulated_program_nation_data.xlsx
+tabulated_nation_data:
+  type: pandas.CSVDataSet
+  filepath: data/04_feature/tabulated_nation_data.csv
   save_args:
     index: False
-    sheet_name: Totals
-  load_args:
-    sheet_name: Totals
+
+tabulated_program_data:
+  type: pandas.CSVDataSet
+  filepath: data/04_feature/tabulated_program_data.csv
+  save_args:
+    index: False
+
+#tabulated_program_data:
+#  type: pandas.ExcelDataSet
+#  filepath: data/04_feature/tabulated_program_nation_data.xlsx
+#  save_args:
+#    index: False
+#    sheet_name: Totals
+#  load_args:
+#    sheet_name: Totals
 
 tabulated_platform_data:
   type: pandas.CSVDataSet
@@ -185,6 +191,18 @@ boolean_daily_variable:
 
 tabulated_countries_data_annual_counts:
   type: pandas.ExcelDataSet
-  filepath: data/04_feature/tabulated_filtered_nation_data.xlsx
+  filepath: data/04_feature/tabulated_nation_data_filtered.xlsx
+  save_args:
+    index: True
+
+tabulated_programs_data_annual_counts:
+  type: pandas.ExcelDataSet
+  filepath: data/04_feature/tabulated_program_data_filtered.xlsx
+  save_args:
+    index: True
+
+tabulated_platform_data_annual_counts:
+  type: pandas.ExcelDataSet
+  filepath: data/04_feature/tabulated_platform_data_filtered.xlsx
   save_args:
     index: True
