--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -48,9 +48,35 @@ boolean_days_variables:
 boolean_counts_country:
   group_by: program_country_id
   reference_index: program_country_name
+  list_by: program_name
   drop:
     - Variable_id
     - Variable_nameShort
+  index_reset:
+    - ptf_id
+    - lat
+    - lon
+  math_operations: {sum: annual_counts}
+
+boolean_counts_program:
+  group_by: program_id
+  reference_index: program_name
+  list_by: program_country_name
+  drop:
+    - Variable_id
+    - Variable_nameShort
+  index_reset:
+    - ptf_id
+    - lat
+    - lon
+  math_operations: {sum: annual_counts}
+
+boolean_counts_platform:
+  group_by: ptfModel_id
+  reference_index: ptfModel_ptfType_nameShort
+  list_by: Variable_nameShort
+  drop:
+    - Variable_id
   index_reset:
     - ptf_id
     - lat
@@ -62,9 +88,13 @@ boolean_days_country:
   reference_index: program_country_name
   math_operations: {median: days_median, max: days_maximum, mean: days_mean}
 
-program_country_group:
+nation_group:
   group_by: program_country_name
   list_by: program_name
+
+program_group:
+  group_by: program_name
+  list_by: program_country_name
 
 platform_group:
   group_by: ptfModel_ptfType_id
