--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -206,3 +206,9 @@ tabulated_platform_data_annual_counts:
   filepath: data/04_feature/tabulated_platform_data_filtered.xlsx
   save_args:
     index: True
+
+variable_list_by_year:
+  type: pandas.ExcelDataSet
+  filepath: data/04_feature/variable_list_by_year.xlsx
+  save_args:
+    index: True
