--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -212,3 +212,9 @@ variable_list_by_year:
   filepath: data/04_feature/variable_list_by_year.xlsx
   save_args:
     index: True
+
+unknown_variable_list_by_year:
+  type: pandas.ExcelDataSet
+  filepath: data/04_feature/unlisted_variables_by_year.xlsx
+  save_args:
+    index: True
